# nighteye

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.sh
docs/: ARCHITECTURE.md  BUILD_PLAN.md  CONSTRUCTORS.md  JOURNAL.md  PORTAL.md  SIFT_BOOTUP.md
scripts/: run_srl2015_pipeline.py  start_demo_portal.py
src/nighteye/: __init__.py  audit.py  case.py  causation.py  cli.py  confidence.py  db.py  hypothesis_lifecycle.py  identity.py  journal.py  models.py  provenance.py
src/nighteye/agent/: backends.py  investigator.py  prompts.py  tools.py
src/nighteye/canonical/: __init__.py  engine.py  mapper.py  types.py
src/nighteye/constructors/: __init__.py  base.py  beaconing.py  cleanup.py  collection.py  counter_evidence.py  credential_access.py  dedup.py  defense_evasion.py  exfiltration.py  impact.py  investigation.py  lateral_movement.py  log_clearing.py  memory_anomaly.py  persistence.py  remote_execution.py  scoring.py  shadow_deletion.py  suspicious_lineage.py  timestomp.py
src/nighteye/correlation/: __init__.py  root_cause.py
src/nighteye/graph/: __init__.py  graph.py
src/nighteye/ingest/: __init__.py  carvers.py  chainsaw.py  dispatch.py  e01_pipeline.py  ecs.py  evtx.py  executor.py  extract.py  ez_csv.py  ez_tools.py  hayabusa.py  index_template.py  memprocfs.py  opensearch_client.py  orchestrator.py  plaso_storage.py  python_csv_json.py  python_lnk.py  python_mft.py  python_pe_signer.py  python_prefetch.py  python_registry.py  redline_mans.py  srl2015.py  srl2015_complete.py  volatility.py  yara.py
src/nighteye/ingest/parsers/: __init__.py  amcache.py  mft.py  (+4 more)
src/nighteye/mcp/: __init__.py  server.py
src/nighteye/portal/: __init__.py  app.py
src/nighteye/report/: __init__.py  json_export.py  markdown.py
src/nighteye/schema/: __init__.py  graph.sql
src/nighteye/tests/: e2e_mcp_test.py
src/nighteye/validation/: __init__.py  end_of_case.py
tests/: conftest.py  test_additional_constructors.py  test_audit.py  test_case.py  test_causation_provenance.py  test_confidence.py  test_constructors.py  test_db.py  test_e2e_pipeline.py  test_evtx.py  test_executor_pipeline.py  test_extract_idempotent.py  test_hunt_parsers.py  test_identity.py  test_index_naming.py  test_ingest.py  test_mcp_tools.py  test_memory_parsers.py  test_models.py  test_orchestrator.py  test_parsers.py  test_persistence_evasion.py  test_schema.py  test_smoke.py
(+30 files in other folders)
